--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -10,6 +10,8 @@
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       %ul.nav.navbar-nav
         %li
+          = link_to "My Reservations", reservations_users_path     
+        %li
           = link_to "Users", users_path          
         %li
           = link_to "Add New Car", new_car_path
