--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -12,7 +12,7 @@
         %li
           = link_to "Make New reservation", root_path 
         %li
-          = link_to "My Reservations", reservations_users_path     
+          = link_to "My Reservations", reservations_path     
         %li
           = link_to "Users", users_path          
         %li
